--- a/mainpage/cliend management.css
+++ b/mainpage/cliend management.css
@@ -240,9 +240,17 @@ tr {
 }
 
 .createclient {
-    background-color: #C7DB58;
     color : #000;
-    padding: 18px;
     font-weight: 600;
     text-decoration: none;
+}
+
+.button {
+    width: 130px;
+    height: 50px;
+    border-radius: 4px ;
+    margin: 0 10px 0 0;
+    background-color: #C7DB58;
+    padding: 10px;
+
 }
