--- a/mainpage/cliend management.css
+++ b/mainpage/cliend management.css
@@ -143,7 +143,7 @@
 }
 
 .headset-icon {
-    padding: 0 10px 0 430px;
+    padding: 0 10px 0 500px;
 }
 
 .notification {
@@ -152,10 +152,8 @@
 
 .profile {
     display: flex;
-    flex-direction: column;
-    padding-left: 10px;
+    padding-left: 40px;
     align-items: center;
-    position: relative;
 }
 
 .profile-name {
@@ -176,6 +174,8 @@
     outline: none;
     font-size: 16px;
     color: #FFFFFF;
+    height: 24px;
+    width: 24px;
 }
 
 .titlebar {
@@ -193,6 +193,7 @@
     padding: 0 10px 0 10px;
     color: #C2C2C2 !important;
     font-weight: 600 !important;
+    margin-right: 10px ;
 }
 
 .filter {
@@ -205,8 +206,7 @@ table {
     border-collapse: collapse;
     width:  80vw;
     height:50vh;
-    
-}
+    }
 
 th {
     background-color: #19223F;
@@ -224,11 +224,19 @@ tr {
 }
 
 .active {
+    display: flex;
     color: #02C94F;
+    align-content: center;
+}
+
+.edit {
+    padding-left: 25px;
 }
 
 .inactive {
+    display: flex;
     color: #F40000;
+    align-content: center;
 }
 
 .footer {
@@ -236,7 +244,7 @@ tr {
     justify-content: end;
     align-items: center;
     background-color: #192236;
-    height: 100px;
+    height: 97px;
 }
 
 .createclient {
@@ -252,5 +260,13 @@ tr {
     margin: 0 10px 0 0;
     background-color: #C7DB58;
     padding: 10px;
+}
 
+a {
+    text-decoration: none;
+}
+
+.image {
+    width: 30px;
+    height: 30px;
 }
